cmake_minimum_required(VERSION 3.13)
project(c__suanfa)

set(CMAKE_CXX_STANDARD 17)

add_executable(zidingyiArray zidingyiArray.cpp)
add_executable(buhuoyichang buhuoyichang.cpp)
add_executable(zidingyiYichanglei zidingyiYichanglei.cpp)
add_executable(jichengYichanglei jichengYichanglei.cpp)
add_executable(IOliu IOliu.cpp)
add_executable(IOliu2 IOliu2.cpp)
add_executable(wenjianduxie wenjianduxie.cpp)
add_executable(rongqiSuanfaDiedaiqi rongqiSuanfaDiedaiqi.cpp)
add_executable(vector01 vector01.cpp)
add_executable(stringRongqi stringRongqi.cpp)
add_executable(dequeDafenAnli dequeDafenAnli.cpp)
add_executable(stack01 stack01.cpp)
add_executable(queue01 queue01.cpp)
add_executable(list01 list01.cpp)
add_executable(set01 set01.cpp)
add_executable(pair01 pair01.cpp)
add_executable(map01 map01.cpp)
add_executable(multimapAnli multimapAnli.cpp)
add_executable(rongqiShenkaobei rongqiShenkaobei.cpp)
add_executable(shiyongHanshuduixiang shiyongHanshuduixiang.cpp)
add_executable(neijianhanshuduixiang neijianhanshuduixiang.cpp)
add_executable(bind1st_bind_2nd bind1st_bind_2nd.cpp)
add_executable(not1_not2 not1_not2.cpp)
add_executable(ptr_funHanshuduixiangshipeiqi ptr_funHanshuduixiangshipeiqi.cpp)
add_executable(chazhaosuanfa chazhaosuanfa.cpp)
add_executable(changyongdeBianli changyongdeBianli.cpp)
add_executable(changyongPaixu changyongPaixu.cpp)
add_executable(changyongkaobeihetihuan changyongkaobeihetihuan.cpp)
add_executable(changyongsuanshuyujihe changyongsuanshuyujihe.cpp)
add_executable(zongheanli01 zongheanli01.cpp)